- Made ban version {} also listen for CTCP SCRIPT replies. Some scripts apparently use this to
  report their version info.
- Made it so NETINFO won't report a different cloak key error if the server specifies * for the
  cloak keys. Useful for services that rely on VHP.
- Misc /whois and webtv whois fixes
- Added CASEMAPPING=ascii as per request
- /WHO code cleanup + partial recode + bugfixes
- Updated example.conf about U-lines since many people set them wrong.
- Fixed numeric checking.
- Moved /stats zip from NOTICE to RPL_TEXT, updated stats documentation.
- Made it so it is no longer necessary to copy the ModuleInfo structure passed to Mod_Test
  and Mod_Init. Unreal now does this internally.
- Code cleanup/merge m_join/channel_link: fixed multiple channelmode +L problems.
- And another minor +L fix.
- Minor channelmode +f fix.
- IPv6: Fixed unable-to-resolve-bug if both a A/AAAA record and NS/MX/etc records were present
  for the same hostname, reported by Byte (#0000972).
- Updated flags in /version (and greeting), added 'Z' for zip links support, updated tech doc.
- Added set::ident::connect-timeout (default 10s) and set::ident::read-timeout (default 30s) to
  have much more control over ident timeouts, this should also fix connection timeout problems
  during connecting.
- Updated example.conf (added throttle block).
- Made some fixes to the resolver code under Win32
- Fixed a bug in del_throttling_bucket 
- Code cleanup (sys_errlist[])
- Fixed a crash in SVSMOTD that could occur if invalid parameters were used. Reported by 
  emigrant
- Committed little de-Fizzer module to extras/
- Check in autoconf for MacOS X that will make compiling and running on it 
  to work
- Possibly fixed a compile problem on Solaris/SunOS (#0000984) reported by Dom
- Added deny channel::redirect, which allows you to forward a client to another channel
  if the one he/she joined is not allowed. can also be used for channel "aliases" like
  #operhelp sends people to #help