@@ -351,7 +351,7 @@ FD_SETSIZE="-DFD_SETSIZE=$ac_fd"
 AC_MSG_RESULT(no)
 ])
 AC_SUBST(FD_SETSIZE)
-case "${host_cpu}-${host_os}" in
+case `uname -s` in
 *SunOS*)
 CFLAGS="$CFLAGS -D_SOLARIS"
 IRCDLIBS="$IRCDLIBS -lresolv "
